fix select css not showing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2307,9 +2307,6 @@ progress {
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid #c5ccd6;
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
   border-radius: 0.35rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
